--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -35,8 +35,8 @@
   <entry key="xr:Purchase_order_reference" id="BT-13">Bestellreferenz</entry>
   <entry key="xr:Sales_order_reference" id="BT-14">Auftragsreferenz</entry>
   <!-- Be aware that these are for the whole invoice -->
-  <entry key="xr:Invoicing_period_start_date" id="BT-73">Start des Abrechnungszeitraums</entry>
-  <entry key="xr:Invoicing_period_end_date" id="BT-74">Ende des Abrechnungszeitraums</entry>
+  <entry key="xr:Invoicing_period_start_date" id="BT-73">Von</entry>
+  <entry key="xr:Invoicing_period_end_date" id="BT-74">Bis</entry>
   <entry key="xr:Preceding_Invoice_reference" id="BT-25">Rechnungsnummer</entry>
   <entry key="xr:Preceding_Invoice_issue_date" id="BT-26">Rechnungsdatum</entry>
   <entry key="xr:Sum_of_Invoice_line_net_amount" id="BT-106">Nettosumme aller Positionen</entry>
@@ -132,78 +132,73 @@
   <entry key="xr:Deliver_to_city" id="BT-77">Ort</entry>
   <entry key="xr:Deliver_to_country_subdivision" id="BT-79">Bundesland</entry>
   <entry key="xr:Deliver_to_country_code" id="BT-80">Ländercode</entry>
-  <entry key="xr:Tender_or_lot_reference" id="BT-17">Vergabenummer</entry>
+  <entry key="xr:Tender_or_lot_reference" id="BT-17">Vergabekennung</entry>
   <entry key="xr:Receiving_advice_reference" id="BT-15">Kennung der Empfangsbestätigung</entry>
   <entry key="xr:Despatch_advice_reference" id="BT-16">Kennung der Versandanzeige</entry>
   <entry key="xr:Business_process_type" id="BT-23">Prozesskennung</entry>
   <entry key="xr:Specification_identifier" id="BT-24">Spezifikationskennung</entry>
   <entry key="xr:Invoiced_object_identifier" id="BT-18">Objektkennung</entry>
   <entry key="xr:Invoiced_object_identifier/@scheme_identifier" id="BT-18">Schema der Objektkennung</entry>
+  <!-- BG 10 -->
   <entry key="xr:Payee_name" id="BT-59">Name</entry>
   <entry key="xr:Payee_identifier" id="BT-60">Kennung</entry>
-  <entry key="xr:Payee_identifier/@scheme_identifier" id="BT-60">Schema der Kennung</entry>
-  <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Register-/Registriernummer</entry>
-  <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61">Schema der
-    Register-/Registriernummer</entry>
+  <entry key="xr:Payee_identifier/@scheme_identifier" id="BT-60a">Schema der Kennung</entry>
+  <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Registernummer</entry>
+  <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61">Schema der Registernummer</entry>
+  <!-- BG 24 Additonal supporting Documents -->
   <entry key="xr:Supporting_document_reference" id="BT-122">Kennung</entry>
   <entry key="xr:Supporting_document_description" id="BT-123">Beschreibung</entry>
   <entry key="xr:External_document_location" id="BT-124">Verweis (z.B. Internetadresse)</entry>
   <entry key="xr:Attached_document" id="BT-125">Anhangsdokument</entry>
-  <entry key="xr:Attached_document/@mime_code" id="BT-125">Format des Anhangdokuments</entry>
-  <entry key="xr:Attached_document/@filename" id="BT-125">Name des Anhangsdokuments</entry>
+  <entry key="xr:Attached_document/@mime_code" id="BT-125_mime_code">MIME Code des Anhangdokuments</entry>
+  <entry key="xr:Attached_document/@filename" id="BT-125_filename">Name des Anhangsdokuments</entry>
   <entry key="xrv:zeitstempel">Datum/Uhrzeit</entry>
   <entry key="xrv:betreff">Betreff</entry>
   <entry key="xrv:text">Text</entry>
   <entry key="xrv:details">Details</entry>
   <entry key="xr:Invoice_line_note" id="BT-127">Freitext</entry>
-  <entry key="xr:Invoice_line_object_identifier" id="BT-128">Objektkennung</entry>
-  <entry key="xr:Invoice_line_object_identifier/@scheme_identifier" id="BT-128">Schema der
-    Objektkennung</entry>
-  <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Nummer der
-    Auftragsposition</entry>
-  <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Kontierungshinweis</entry>
-  <entry key="xr:Invoice_line_period_start_date" id="BT-134">Start des Abrechnungszeitraums</entry>
-  <entry key="xr:Invoice_line_period_end_date" id="BT-135">Ende des Abrechnungszeitraums</entry>
+  <entry key="xr:Invoice_line_object_identifier" id="BT-128_identifier">Objektkennung</entry>
+  <entry key="xr:Invoice_line_object_identifier/@scheme_identifier" id="BT-128_scheme">Schema der Objektkennung</entry>
+  <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Bestellposition</entry>
+  <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Kontierungsinformation</entry>
+  <entry key="xr:Invoice_line_period_start_date" id="BT-134">Von</entry>
+  <entry key="xr:Invoice_line_period_end_date" id="BT-135">Bis</entry>
   <entry key="xr:Invoiced_quantity" id="BT-129">Menge</entry>
   <entry key="xr:Invoiced_quantity_unit_of_measure_code" id="BT-130">Einheit</entry>
   <entry key="xr:Item_net_price" id="BT-146">Preis pro Einheit (netto)</entry>
   <entry key="xr:Invoice_line_net_amount" id="BT-131">Zeilensumme (netto)</entry>
   <entry key="xr:Item_price_discount" id="BT-147">Rabatt (netto)</entry>
   <entry key="xr:Item_gross_price" id="BT-148">Listenpreis (netto)</entry>
-  <entry key="xr:Item_price_base_quantity" id="BT-149">Anzahl der Einheit</entry>
-  <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Code der Maßeinheit</entry>
+  <entry key="xr:Item_price_base_quantity" id="BT-149">Preiseinheit</entry>
+  <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Kennung der Maßeinheit</entry>
   <entry key="xr:Invoiced_item_VAT_category_code" id="BT-151">Umsatzsteuercode</entry>
-  <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">Umsatzsteuersatz in Prozent</entry>
-  <entry key="xr:Item_name" id="BT-153">Postenbezeichnung</entry>
-  <entry key="xr:Item_description" id="BT-154">Postenbeschreibung</entry>
-  <entry key="xr:Item_Sellers_identifier" id="BT-155">Artikelnummer</entry>
+  <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">Umsatzsteuersatz (%)</entry>
+  <entry key="xr:Item_name" id="BT-153">Bezeichnung</entry>
+  <entry key="xr:Item_description" id="BT-154">Beschreibung</entry>
+  <entry key="xr:Item_Sellers_identifier" id="BT-155">Artikelkennung</entry>
   <entry key="xr:Item_Buyers_identifier" id="BT-156">Artikelkennung des Käufers</entry>
-  <entry key="xr:Item_standard_identifier" id="BT-157">Artikelkennung</entry>
-  <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157">Schema der
-    Artikelkennung</entry>
-  <entry key="xr:Item_classification_identifier" id="BT-158">Code der Artikelklassifizierung</entry>
-  <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158">Kennung zur Bildung
-    des Schemas</entry>
-  <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158">Version zur
-    Bildung des Schemas</entry>
-  <entry key="xr:Item_country_of_origin" id="BT-159">Code des Herkunftslandes</entry>
+  <entry key="xr:Item_standard_identifier" id="BT-157_identifier">Standard-Artikelkennung</entry>
+  <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157_scheme">Schema der Standard-Artikelkennung</entry>
+  <entry key="xr:Item_classification_identifier" id="BT-158_identifier">Kennung der Artikelklassifizierung</entry>
+  <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_scheme">Kennung zur Bildung des Schemas</entry>
+  <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme_version">Version der Kennung zur Bildung des Schemas</entry>
+  <entry key="xr:Item_country_of_origin" id="BT-159">Herkunftsland bzw. Leistungserbringungsort</entry>
   <entry key="xr:Invoice_line_allowance_base_amount" id="BT-137">Grundbetrag (netto)</entry>
   <entry key="xr:Invoice_line_allowance_percentage" id="BT-138">Prozentsatz</entry>
   <entry key="xr:Invoice_line_allowance_amount" id="BT-136">Nachlass (netto)</entry>
-  <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Grund des Nachlasses</entry>
-  <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Code für den Nachlassgrund</entry>
+  <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Nachlassgrund</entry>
+  <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Kennung des Nachlassgrunds</entry>
   <entry key="xr:Invoice_line_charge_base_amount" id="BT-142">Grundbetrag (netto)</entry>
   <entry key="xr:Invoice_line_charge_percentage" id="BT-143">Prozentsatz</entry>
   <entry key="xr:Invoice_line_charge_amount" id="BT-141">Zuschlag (netto)</entry>
-  <entry key="xr:Invoice_line_charge_reason" id="BT-144">Grund des Zuschlags</entry>
-  <entry key="xr:Invoice_line_charge_reason_code" id="BT-145">Code für den Zuschlagsgrund</entry>
+  <entry key="xr:Invoice_line_charge_reason" id="BT-144">Zuschlagsgrund</entry>
+  <entry key="xr:Invoice_line_charge_reason_code" id="BT-145">Kennung des Zuschlagsgrunds</entry>
   <entry key="uebersicht">Übersicht</entry>
   <entry key="uebersichtKaeufer" id="BG-7">Informationen zum Käufer</entry>
   <entry key="uebersichtVerkaeufer" id="BG-4">Informationen zum Verkäufer</entry>
-  <entry key="uebersichtRechnungsInfo" id="BG-4">Rechnungsdaten</entry>
+  <entry key="uebersichtRechnungsInfo" id="invoice-data">Rechnungsdaten</entry>
   <entry key="uebersichtRechnungsuebersicht" id="BG-22">Gesamtbeträge der Rechnung</entry>
-  <entry key="uebersichtUmsatzsteuer" id="BG-23">Aufschlüsselung der Umsatzsteuer auf Ebene der
-    Rechnung</entry>
+  <entry key="uebersichtUmsatzsteuer" id="BG-23">Umsatzsteuer-Aufschlüsselung</entry>
   <entry key="uebersichtNachlass" id="BG-20">Nachlässe auf Ebene der Rechnung</entry>
   <entry key="uebersichtZuschlaege" id="BG-21">Zuschläge auf Ebene der Rechnung</entry>
   <entry key="uebersichtRechnungAbrechnungszeitraum">Abrechnungszeitraum</entry>
@@ -215,29 +210,26 @@
   <entry key="uebersichtBemerkungen" id="BG-1">Bemerkungen zur Rechnung</entry>
   <entry key="details">Details</entry>
   <entry key="detailsPositionAbrechnungszeitraum" id="BG-26">Abrechnungszeitraum</entry>
-  <entry key="detailsPositionPreiseinzelheiten" id="BG-29">Preiseinzelheiten</entry>
-  <entry key="detailsPositionNachlaesse" id="BG-27">Nachlässe auf Ebene der
-    Rechnungsposition</entry>
-  <entry key="detailsPositionZuschlaege" id="BG-28">Zuschläge auf Ebene der
-    Rechnungsposition</entry>
+  <entry key="detailsPositionPreiseinzelheiten" id="BG-29">Preisinformationen</entry>
+  <entry key="detailsPositionNachlaesse" id="BG-27">Nachlässe auf Ebene der Rechnungsposition</entry>
+  <entry key="detailsPositionZuschlaege" id="BG-28">Zuschläge auf Ebene der Rechnungsposition</entry>
   <entry key="detailsPositionArtikelinformationen" id="BG-31">Artikelinformationen</entry>
-  <entry key="detailsPositionArtikeleigenschaften" id="BG-32">Eigenschaften des Artikels</entry>
+  <entry key="detailsPositionArtikeleigenschaften" id="BG-32">Artikeleigenschaften</entry>
   <entry key="zusaetze">Zusätze</entry>
   <entry key="zusaetzeVerkaeufer" id="BG-4">Informationen zum Verkäufer</entry>
   <entry key="zusaetzeSteuervertreter" id="BG-11">Steuervertreter des Verkäufers</entry>
   <entry key="zusaetzeKaeufer" id="BG-7">Informationen zum Käufer</entry>
   <entry key="zusaetzeLieferung" id="BG-13">Lieferinformationen</entry>
   <entry key="zusaetzeVertrag">Informationen zum Vertrag</entry>
-  <entry key="zusaetzeZahlungsempfaenger" id="BG-10">Vom Verkäufer abweichender
-    Zahlungsempfänger</entry>
+  <entry key="zusaetzeZahlungsempfaenger" id="BG-10">Vom Verkäufer abweichender Zahlungsempfänger</entry>
   <entry key="laufzettel">Laufzettel</entry>
   <entry key="laufzettelHistorie">Bearbeitungshistorie</entry>
   <entry key="anlagen">Anlagen</entry>
   <entry key="anlagenListe">Rechnungsbegründende Unterlagen</entry>
   <entry key="Preis">Preis</entry>
-  <entry key="Preis Einheit">Preis Einheit</entry>
-  <entry key="MwSt.">MwSt.</entry>
-  <entry key="St. Code">St. Code</entry>
+  <entry key="Preis Einheit">Preiseinheit</entry>
+  <entry key="MwSt.">USt. Satz</entry>
+  <entry key="St. Code">Code</entry>
   <entry key="Gesamt">Gesamt</entry>
   <entry key="Bereiche ohne Inhalte werden nicht dargestellt!">Bereiche ohne Inhalte werden nicht dargestellt!</entry>
   <entry key="Seite">Seite</entry>
